--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "fetch": "^1.1.0",
     "nodemon": "^3.1.7",
     "pug": "^3.0.3"
   }
